Backport 1.17.1
Backport-1.17

This reverts commit 41a627d75b52cf315c6f73969ea0d92efea1e91d.
fix


Revert "disable forge"

This reverts commit 707847e04bdb1e4fe890a1bef125f65f80916433.

fix


oops


Revert "1.18 forge"

This reverts commit 1a2319e9739e5501c00de01f99efc4fa0d637a45.
re enable forge


fix forge 1.17


Revert "1.18 forge"

This reverts commit 1a2319e9739e5501c00de01f99efc4fa0d637a45.
re enable forge


fix forge 1.17


fix


fix


fix build


fix mappings


fix


revert use forge system because it doesn't exist


fix


Revert "don't need fcapi mixin in forge 1.18.2"

This reverts commit 283c46a83f247e06e7c74f6accd3bbae86ba91c1.

fix macros not saving on 1.17 and below. closes #60


fix


fix mc depend version on forge


fix 1.17 requiring java 17


Update build.gradle
add release = 16